fixed jumping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,7 @@ body{
 .maindiv{
 	color: #00a7f3;	
 	background-color: #1c1e22;
+	padding: 30px;
 }
 
 
